# kyc-pan-aadhaar-idp

./: .gitignore  Dockerfile  docker-compose.yml  dockerignore  pan.py  pyproject.toml  quality_scan.csv  quality_scan_processed.csv  requirements.txt
.github/workflows/: quality_gate.yaml
apps/api/: app_factory.py  main.py
apps/api_gateway/: app_factory.py  jobs.py  main.py
apps/common/: settings.py
apps/review_ui/: adapters.py  domain.py  main.py
apps/workers/: celery_app.py  celery_main.py  pipeline_loader.py  tasks.py
config/: app.yaml  models.yaml  thresholds.yaml
config/schemas/: aadhaar.schema.json  pan.schema.json
data/baselines/: ci_golden.metrics.json  ci_hard.metrics.json
docs/: Readme.md
kyc_idp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: debug_ids.py
services/: pipeline.py
services/card_crop_yolov8/: detector.py
services/doc_classifier/: classifier.py
services/extraction/: llm_cleaner.py  normalize.py
services/ingestion/: storage.py
services/ocr_paddle/: roi_ocr.py
services/preprocessing/: quality.py
services/validation/: schema_validation.py
tests/integration/: test_api_contract.py  test_jobs_contract.py
tests/unit/: test_pipeline_unit.py
tools/: profile_latency.py  quality_tuner.py
tools/eval_harness/: build_suites.py  quality_gate.py  run_eval.py
tools/synthetic_id_generator/: __init__.py  aadhaar_generator.py  augmentations.py  config.py  font_utils.py  generate_dataset.py  pan_generator.py  qr_utils.py  render_utils.py  tempalate_utils.py  utils.py
tools/train/: prepare_data.py  (+2 more)
(+2 files in other folders)
