[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyc-idp"
version = "0.1.0"
description = "Enterprise KYC IDP System"
dependencies = [
    "fastapi",
    "uvicorn",
    "celery",
    "redis",
    "paddlepaddle",
    "paddleocr",
    "ultralytics",
    "opencv-python",
    "streamlit",
    "rich"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "services*", "config*"]
